# robotframework-ecommerce-tests

./: README.md
ECommerce_WebApp/: .robocop  log.html  output.xml  pyproject.toml  report.html  requirements.txt
ECommerce_WebApp/TestCases/: TC_AUTH_001.robot  TC_AUTH_002.robot  TC_CART_001.robot  TC_CART_002.robot  TC_CHECKOUT_001.robot  TC_CHECKOUT_002.robot  TC_CHECKOUT_003.robot  TC_PRODUCT_001.robot  TC_PRODUCT_002.robot  TC_PRODUCT_003.robot
ECommerce_WebApp/data/: test_data.resource
ECommerce_WebApp/log/: log.html  output.xml  report.html
ECommerce_WebApp/resources/keywords/: cart_keywords.resource  checkout_keywords.resource  common_keywords.resource  inventory_keywords.resource  login_keywords.resource
ECommerce_WebApp/resources/locators/: cart_locators.resource  checkout_locators.resource  inventory_locators.resource  login_locators.resource
